Implemented dynamic home screen with quiz categories and popular quizzes, added quiz-taking functionality with questions, timer, and answer options, and ensured secure data handling for a smooth user experience

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.OnlineQuiz"
         tools:targetApi="31">
         <activity
+            android:name=".QuizListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QuizHomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".QuizRegisterActivity"
             android:exported="false" />
         <activity
