--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.OnlineQuiz"
         tools:targetApi="31">
         <activity
+            android:name=".QuizResultActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PopularQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QuizCategoriesActivity"
+            android:exported="false" />
+        <activity
             android:name=".TakeQuizActivity"
             android:exported="false" />
         <activity
