--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_quiz_main"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_quiz_main"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineQuiz"
         tools:targetApi="31">
+        <activity
+            android:name=".UserDataActivity"
+            android:exported="false" />
         <activity
             android:name=".QuizResultActivity"
             android:exported="false" />
@@ -24,9 +27,7 @@
         <activity
             android:name=".TakeQuizActivity"
             android:exported="false" />
-        <activity
-            android:name=".QuizListActivity"
-            android:exported="false" />
+
         <activity
             android:name=".QuizHomeActivity"
             android:exported="false" />
